# binary-analysis-toolkit

./: .env.sample  .gitignore  LICENSE  README.md  analyze_pe.py.bak  bat_analyzer.toml.example  main.py  pe_analyzer.toml.example  pyproject.toml
bat_analyzer/: __init__.py  __main__.py  config.py  pe_analysis.py  settings.py  strings.py
bat_analyzer/integrations/: __init__.py  capa_runner.py  decompiler.py  dotnet_analyzer.py  llm_report.py  unpacker.py  yara_runner.py
bat_analyzer/rules/: __init__.py  generic.py  ioc.py  specimen.py
binanalysis/: __init__.py  __main__.py  config.default.yaml  config.py  context.py  generated_ioc.py  ioc.py  output.py  rules.py  settings.py  validators.py
binanalysis/formats/: __init__.py
binanalysis/formats/pe/: __init__.py  analysis.py  config.py  context.py  dotnet_analyzer.py  installer.py  manifest.py  signature.py
binanalysis/formats/pe/rules/: __init__.py  generated.py  generic.py  specimen.py
binanalysis/generic/: __init__.py  deobfuscate.py  hashes.py  path_context.py  rules.py  strings.py
binanalysis/integrations/: capa_runner.py  decompiler.py  html_report.py  llm_report.py  unpacker.py  vt_lookup.py  yara_runner.py
data/: benign_domains.txt  rejected_rules.json  suspicious_subdomains.txt  validation_report.json
docs/: guide.md
docs/plans/: 2026-03-14-binanalysis-implementation.md  2026-03-14-binanalysis-refactor-design.md
pe_analyzer/: __init__.py  __main__.py  config.py  context.py  pe_analysis.py  settings.py
pe_analyzer/integrations/: capa_runner.py  decompiler.py  dotnet_analyzer.py  yara_runner.py
pe_analyzer/rules/: __init__.py  generic.py  ioc.py  specimen.py
pipeline/: README.md  README.mmd  aggregate_results.py  batch_analyze.py  collect_samples.py  fetch_clean_samples.py  generate_rules.py  run.py  validate_rules.py
