[project]
name = "binanalysis"
version = "0.2.0"
description = "Binary Analysis Toolkit — multi-format static analyzer with behavioral rules, YARA, capa, and LLM report generation"
requires-python = ">=3.10"
dependencies = [
    "pefile",
    "yara-python",
]

[project.optional-dependencies]
capa = ["flare-capa"]
dotnet = ["dnfile"]
decompile = ["r2pipe"]
all = ["flare-capa", "dnfile", "r2pipe"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
binanalysis = "binanalysis.__main__:main"
